chaneg position of search and menu button in mobile fix gap in bottom of quiz/test: because of image dosn't had height fix quizPointy don't have quizContainer fix some margin and padding in results and quizs pages change some values of lowTitle in css

--- a/Django-React/frontend/static/css/base/_globals.scss
+++ b/Django-React/frontend/static/css/base/_globals.scss
@@ -584,17 +584,17 @@ hr {
 }
 
 .lowTitle {
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     opacity: .15;
     font-family: myLalezar, serif;
     font-weight: 300;
     width: 100%;
     justify-content: center;
     display: flex;
-    margin-bottom: -4rem;
+    margin-bottom: -3rem;
 
     @include breakpoints-down(large) {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 }
 
