--- a/Django-React/frontend/static/css/components/_result.scss
+++ b/Django-React/frontend/static/css/components/_result.scss
@@ -31,12 +31,12 @@
         }
     }
 
-    &__share {
-        h5 {
-            margin-bottom: 1rem;
-            white-space: pre-line;
-        }
-    }
+    // &__share {
+    //     h5 {
+    //         margin-bottom: 1rem;
+            // white-space: pre-line;
+    //     }
+    // }
 
     &__score {
         // font-size: $font-xl; font-weight: 600;
@@ -170,8 +170,8 @@
 }
 
 .resultPointy {
-    margin-bottom: 4rem;
-    padding: 1rem;
+    // margin-bottom: 4rem;
+    // padding: 1rem;
 
     p {
         font-size: 1.2rem;
